# Scate

./: CMakeLists.txt  INSTALL  NEWS  README
cmake-modules/: FindKateSDK.cmake
share/: scate.desktop  supercollider.xml  ui.rc
src/: ScateConfigPage.cpp  ScateConfigPage.hpp  ScateHelpBrowser.cpp  ScateHelpBrowser.hpp  ScatePlugin.cpp  ScatePlugin.hpp  ScateView.cpp  ScateView.hpp  cmdline.cpp  cmdline.hpp  scate.cpp  scate.h
